--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -11,6 +11,7 @@
       0 0 20px #f9ffa7,
       0 0 20px rgb(244, 255, 142),
       0 0 50px #fbff00;
+      padding-top: 25px;
   }
 form.login-form {
     display: flex;
