--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -65,3 +65,6 @@ body::-webkit-scrollbar-thumb
 	background-color: var(--orange);
 	border-radius: 10px;
 }
+.text-center {
+    text-align: center;
+}
