--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,3 +1,8 @@
 footer {
     border-top: solid 1px yellow;
+    text-align: center;
+    a {
+        color: yellow;
+        padding: 20px;
+    }
 }
