--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+    padding-top: 25px;
     .header-logo {
         padding: 20px 0;
         width: 310px;
