--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -21,7 +21,7 @@ nav {
 			height:2px;
 			width:20px;
 			margin:2px;
-			background:#000000;
+			background:yellow;
 		}
 		&.active {
 			background:black;
@@ -37,7 +37,7 @@ nav {
 			&.active {
 				background:yellow;
 				span {
-					background:black;
+					background: black;
 				}
 			}
 		}
@@ -71,8 +71,9 @@ nav {
 				margin-left:0%;
 				li {
 					display: block;;
-					a {
+					a, button {
 						display: block;
+						color: black;
 					}
 				}
 			}
@@ -95,52 +96,11 @@ nav {
 		}
 	}
 	ul.menu {
-		list-style: none;
-		margin: 0;
-		padding:0;
-		transition: ease 1s all;
-		@media(max-width:480px){
-			opacity: 0;
-			max-height: 0px;
-			overflow: hidden;
-			visibility: none;
-			display:flex;
-			position: absolute;
-			left:0;right:0;top:100%;
-			flex-direction: column;
-			background: yellow;
-			margin-left:-100%;
-			&.active {
-				opacity: 1;
-				max-height: 500px;
-				right:0;
-				margin-left:0%;
-				li {
-					display: block;;
-					a {
-						display: block;
-					}
-				}
-			}
-		}
 		li {
-			display: inline-block;
-			a, button {
-				display: inline-block;
-				color: yellow;
+			list-style: none;
+			a {
+				color:yellow;
 				text-decoration: none;
-				padding:0.5em 1em;
-				background: none;
-				border: none;
-				cursor: pointer;
-				&:hover {
-					color: #b5ac00; 
-					background:#fff300;
-				}
-			}
-			b {
-				padding:1em 1em;
-				color: yellow;
 			}
 		}
 	}
